Add style to heading

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"
-  <meta name="viewport" contents="width=device=width, initial  
+  <meta name="viewport" contents="width=device-width, initial-scale=1.0">
+  <title>Hello</title>
 </head>    
+<body>
+  <h1 style="color:blue;"> This is a header </h1>
+  Welcome to my page
+</body>  
 </html>
