--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<<<<<<< Updated upstream
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"
-  <meta name="viewport" contents="width=device=width, initial  
+  <meta charset="UTF-8">
+  <meta name="viewport" contents="width=device-width, initial-scale=1.0">
+  <title>Hello</title>
 </head>    
+<body>
+  <h1 style="color:blue;"> This is a header </h1>
+  Welcome to my page
+</body>  
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-    
-</html>
->>>>>>> Stashed changes
