--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Hello</title>
 </head>    
 <body>
-  <h1 style="color:blue;"> This is a head </h1>
-  Welcome to my page
+  <h1 style="color:blue;"> My first page!! </h1>
+  Welcome to my page!
 </body>  
 </html>
