--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" contents="width=device-width, initial-scale=1.0">
   <title>Hello</title>
+  <style>
+    h1{
+      color:blue;
+    }
+  </style>
 </head>    
 <body>
-  <h1 style="color:blue;"> My first page!! </h1>
+  <h1> My first page!! </h1>
   Welcome to my page!
 </body>  
 </html>
